use new jest reporte

--- a/.github/workflows/master-release.yml
+++ b/.github/workflows/master-release.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --frozen-lockfile
       - run: yarn build
-      - run: yarn test:coverage
+      - run: yarn citest
       - run: yarn semantic-release
         env:
           CI: true
